# artifact-lifecycle-lab

./: .gitignore  Makefile  README.md  pyproject.toml
artifact_lab/: __init__.py
artifact_lab/contracts/: __init__.py  concurrency.py  datasets.py  legacy_id.py  paths.py  schemas.py
artifact_lab/dag/: __init__.py
artifact_lab/derive/: __main__.py  panel.py  summary.py
artifact_lab/docs/: concurrency_design.md  legacy_map.md  repo_id.md
artifact_lab/execution/: __init__.py  __main__.py  atomic_io.py  checkpoint.py  execution_log.py  manifest_metadata.py  paths.py  recover.py  session.py  states.py  verify.py
artifact_lab/experiments/: __init__.py
artifact_lab/ingest/: __main__.py  extract.py  git_activity.py  git_utils.py  profiling.py
artifact_lab/label/: __init__.py
artifact_lab/paper/: __init__.py
artifact_lab/protocol/: __init__.py  detector.py
artifact_lab/registry/: __init__.py  build_e1_100.py  build_e1_1000.py  build_general_oss_pool.py  (+2 more)
docs/: LATE_BINDING_MODEL_v1.md  PAPER_ARGUMENT.md  REVIEWER2_SIMULATION.md  REVIEW_RESPONSE_PLAN.md  RQ5_EXPERIMENT_INFRASTRUCTURE.md  SCIENTIFIC_EVIDENCE_FREEZE.md  SCIENTIFIC_REVIEW_v1.md  architecture_audit.md  cohort_ladder.md  crash_recovery.md  crash_safe_execution.md  dataset_lineage.md  l0_discovery_design.md  legacy_id_bridge.md  reference_state_model.md  truth_decay_pilots.md
paper/: README.md  main.tex  references.bib
platform/: __init__.py
protocol/: E1_1000_protocol_v1.md  RQ5_AGENT_IMPACT_EXPERIMENT_v1.md  TRUTH_DECAY_PROTOCOL_v1.md  experiment_manifest.yaml  pre_execution_checklist.md
(+323 files in other folders)
