[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact-lifecycle-lab"
version = "0.1.0"
description = "Research platform for mining artifact lifecycles in Git repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
paper = ["matplotlib>=3.8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["artifact_lab*"]

[tool.pytest.ini_options]
testpaths = ["artifact_lab/tests"]
pythonpath = ["."]
